Adding notional document model image.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -321,7 +321,8 @@ documents (<a href="ZaimaUseCases-Chrome60.html">apply <code>bottom</code> prope
 
 <div class="figWrap">
   <figure>
-   <figcaption>Component view of a Zaima document.</figcaption>
+   <p><img style="vertical-align:top;" src="images/ZaimaChantNotionalModel.png" width="700px"></p>
+   <figcaption>Notional view of a Zaima document. Beit, Medgam, and Sereyu scopes are not depicted.</figcaption>
   </figure>
 </div>
 
