--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -66,6 +66,7 @@ function unhighlightMedgam(medgam) {
   .rubricate { color: #8a0707; }
   .figure-wide { margin-right: 10%; }
 ruby { font-size: 50px; color: rgb(102, 102, 102); font-family: "Abyssinica SIL", "ms mincho", stsong, 'lisong pro';  }
+ruby.regular { font-size: 16px; color: rgb(102, 102, 102); font-family: "Abyssinica SIL", "ms mincho", stsong, 'lisong pro';  }
 .diret_difat {
   position: relative;
   top: 0px;
@@ -322,7 +323,7 @@ documents (<a href="ZaimaUseCases-Chrome60.html">apply <code>bottom</code> prope
 <div class="figWrap">
   <figure>
    <p><img style="vertical-align:top;" src="images/ZaimaChantNotionalModel.png" width="700px"></p>
-   <figcaption>Notional view of a Zaima document. Beit, Medgam, and Sereyu scopes are not depicted.</figcaption>
+   <figcaption>Notional view of a Zaima document. Beit, Medgam, and Sereyu complex scopes are not depicted.</figcaption>
   </figure>
 </div>
 
@@ -425,6 +426,8 @@ it does not <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#
 <p>The <code>notation</code> element has the same role as the <code>rt</code> element in Ruby annotation. By default the
 <code>notation</code> text font size will be 50% the size of the <code>cbase</code> text but may be set to another size at the
 discression of the content author.</p>
+
+<p><em>[TBD: discuss the nested notation use case and provide example. ]</em></p>
 </section>
 
 <section>
@@ -441,7 +444,6 @@ discression of the content author.</p>
   <dt><span>DOM interface:</span></dt>
   <dd>Uses <code>HTMLElement</code>.</dd>
 </dl>
-<p><em>[TBD: discuss notationGroup as a child of another notationGroup, and the related nesting use case. ]</em></p>
 <p>The <code><a data-link-type="element" href="#elementdef-notationGroup" id="ref-for-elementdef-notationGroup-3">notationGroup</a></code> element associates two or more lines of chant notation against common base text.  The individual lines of chant notation will be contained with separate <code>group</code> elements.  Each <code>group</code> elements are children of a <code>notationGroup</code> and <em>must</em> contain identical sequences of chant base text. The base text within each <code>group</code> will later be superimposed so as to appear as a single base line.  The <code>cbase</code> and <code>notation</code> pairings within a <code>group</code> is expected to be different for each <code>group</code>. With the chant base text with a <code>group</code> overlaid, the <code>notation</code> text will appear in the interlinear space between the base text and the preceding text line. The <code>notation</code> text within a <code>notationGroup</code> does not superimpose line the base text, but stacks in successive rows above the base. The layout of two <code>group</code> children of a <code>notationGroup</code> would be identical to nested rubies where the inner ruby text appears at the higher level (the position of the first <code>group</code> child of the <code>notationGroup</code>).</p>
 
 <p>The child node index of the <code>group</code> children of <code>notationGroup</code> indicates its interlinear row position counted from
@@ -474,7 +476,7 @@ which indicates that no text should be presented at its row index position.
 The <code>group</code> element should display as a <code>block</code> type (?) and permit the position of its text contents 
 to be positioned with the <code>bottom</code> and <code>top</code> properties.</p>
 <p><em>[Issue: <code>bottom</code> or <code>top</code> as a style attribute of <code>group</code> should only apply to the contents of the
-<code>notation</code> element.  Should a <code>notation-bottom</code> element be added (top seems non-essential)]?</em></p>
+<code>notation</code> element.  Should a <code>notation-bottom</code> element be added (top seems non-essential)?]</em></p>
 
 <p>An <code><a data-link-type="element" href="#elementdef-group" id="ref-for-elementdef-group-3">group</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-notationGroup" id="ref-for-elementdef-notationGroup-4">notationGroup</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
@@ -609,7 +611,7 @@ notation line of the mode (silt) is included for clarity since a notation line i
       <rb>ቱ</rb><rt>ር</rt>።
     </ruby>
     </div>
-    <p><br/> <br/></p><span style="margin-left: 40px;">Hover mouse pointer over <span style="color: red;">፪</span> above.</span>
+    <p><br/> <br/></p><span style="margin-left: 40px;">Hover mouse pointer over <span style="color: red;">፪</span> above to illuminate scope.</span>
   </td>
   </tr><tr>
   <td><script type="text/plain">
@@ -675,7 +677,7 @@ notation line of the mode (silt) is included for clarity since a notation line i
   <dd>Uses <code>HTMLElement</code>.</dd>
 </dl>
 <p>The <code><a data-link-type="element" href="#elementdef-sereyu" id="ref-for-elementdef-sereyu-2">sereyu</a></code> element is very similar to the
-<code>medgam</code> element in that it has a disjoint scope that will again be referenced applying its element <code>id</code> as a <code>class</code>
+<code>medgam</code> element in that it has a disjoint scope that will again be referenced by applying its element <code>id</code> as a <code>class</code>
 type.
 required child <code>marker</code> element and a disjoint scope. The <code>sereyu</code> is used
 that 
@@ -687,8 +689,40 @@ that is not a child of a <code><a data-link-type="element" href="#elementdef-cha
 <p><em>[TBD: 2 examples needed for miliket-sereyu and beit-sereyu use cases]</em></p>
 
 <div class="example"><div class="example-title"><span>Example 3</span></div>
-  <p>Miliket-Sereyu Example</p>
+<table>
+<table>
+  <colgroup>
+    <col width="1000px"/>
+  </colgroup>
+  <tbody>
+<tr><td><div style="position: relative; ">
+<br/>
+<div style="float: left; font-size:50px;">
+... ፡<ruby><rb>ኦ</rb><rt>ዓይ</rt><rb>መ</rb><rt>᎖</rt><rb>ድ</rb><rt></rt><rb>ኃ</rb><rt>᎑</rt><rb>ኒ</rb><rt>᎔</rt><rb>ታ</rb><rt>ር</rt>፡</ruby>
 </div>
+<div style="position: relative; display:inline-block; width:560px; margin-left:330px; float:left; top:00px;">
+  <ruby class="row2ex"><rb>ለ</rb><rt>፪</rt><rb>ሔ</rb><rt>᎓</rt><rb>ዋ</rb><rt><span>᎖</span></rt><rb>ን</rb><rt></rt></ruby>
+  <ruby class="row1ex"><rb>ለ</rb><rt></rt><rb>ሔ</rb><rt>᎖</rt><rb>ዋ</rb><rt>᎖</rt><rb>ን</rb><rt>ረዩ</rt>᎓ተፈ<rb>ሥ</rb><rt>፡</rt><rb>ሒ</rb><rt>ረዩ</rt>፡እንተ፡ ...</ruby>
+</div>
+<!-- ፺፱ኛ፡ትምህርት/ ውዳሴ፡ማርያም፡ዘሠሉስ፡ ምዕራፍ፡ገጽ፡፻፹፰፡ዜማ፡በዓራራይ፡ -->
+<p><br/><br/></p>
+</div></td></tr>
+<tr><td>
+<script type="text/plain">
+<chant>
+... ፡<cbase>ኦ</cbase><notation>ዓይ</notation><cbase>መ</cbase><notation>᎖</notation>ድ<cbase>ኃ</cbase><notation>᎑</notation><cbase>ኒ</cbase><notation>᎔</notation><cbase>ታ</cbase><notation>ር</notation>፡
+<notationGroup>
+  <cbase>ለ</cbase><notation>፪</notation><cbase>ሔ</cbase><notation>᎓</notation><cbase>ዋ</cbase><notation><span>᎖</span></notation><cbase>ን</cbase><notation></notation>
+  <sereyu><cbase>ለ</cbase><notation></notation><cbase>ሔ</cbase><notation>᎖</notation><cbase>ዋ</cbase><notation>᎖</notation><cbase>ን</cbase><marker>ረዩ</marker></sereyu>
+</notationGroup>
+᎓<sereyu>ተፈ<cbase>ሥ</cbase><notation>፡</notation><cbase>ሒ</cbase><marker>ረዩ</marker></sereyu>፡እንተ፡ ...
+</chant>
+</script>
+</td></tr>
+</table>
+</div>
+<p><br/></p>
+
 <div class="example"><div class="example-title"><span>Example 4</span></div>
   <p>Beit-Sereyu Example</p>
 </div>
@@ -723,6 +757,7 @@ expanded from of the <code>haleita</code> .</p>
 
 <section>
 <h3>Digua Sample Applying Many Elements</h3>
+<p>An interactive rendering of this sample appears in the <a href="WhatIsZaima.html#components-sample">What is Zaima?</a> article.</p>
 <div class="example"><div class="example-title"><span>Example 5</span></div>
 <div>
   <figure>
