--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -688,7 +688,7 @@ that is not a child of a <code><a data-link-type="element" href="#elementdef-cha
 
 <p><em>[TBD: 2 examples needed for miliket-sereyu and beit-sereyu use cases]</em></p>
 
-<div class="example"><div class="example-title"><span>Example 3</span></div>
+<div class="example" style="width:1000px"><div class="example-title"><span>Example 3</span></div>
 <table>
 <table>
   <colgroup>
@@ -701,7 +701,7 @@ that is not a child of a <code><a data-link-type="element" href="#elementdef-cha
 ... ፡<ruby><rb>ኦ</rb><rt>ዓይ</rt><rb>መ</rb><rt>᎖</rt><rb>ድ</rb><rt></rt><rb>ኃ</rb><rt>᎑</rt><rb>ኒ</rb><rt>᎔</rt><rb>ታ</rb><rt>ር</rt>፡</ruby>
 </div>
 <div style="position: relative; display:inline-block; width:560px; margin-left:330px; float:left; top:00px;">
-  <ruby class="row2ex"><rb>ለ</rb><rt>፪</rt><rb>ሔ</rb><rt>᎓</rt><rb>ዋ</rb><rt><span>᎖</span></rt><rb>ን</rb><rt></rt></ruby>
+  <ruby class="row2ex"><rb>ለ</rb><rt>፪</rt><rb>ሔ</rb><rt>᎓</rt><rb>ዋ</rb><rt>᎖</rt><rb>ን</rb><rt></rt></ruby>
   <ruby class="row1ex"><rb>ለ</rb><rt></rt><rb>ሔ</rb><rt>᎖</rt><rb>ዋ</rb><rt>᎖</rt><rb>ን</rb><rt>ረዩ</rt>᎓ተፈ<rb>ሥ</rb><rt>፡</rt><rb>ሒ</rb><rt>ረዩ</rt>፡እንተ፡ ...</ruby>
 </div>
 <!-- ፺፱ኛ፡ትምህርት/ ውዳሴ፡ማርያም፡ዘሠሉስ፡ ምዕራፍ፡ገጽ፡፻፹፰፡ዜማ፡በዓራራይ፡ -->
@@ -712,10 +712,10 @@ that is not a child of a <code><a data-link-type="element" href="#elementdef-cha
 <chant>
 ... ፡<cbase>ኦ</cbase><notation>ዓይ</notation><cbase>መ</cbase><notation>᎖</notation>ድ<cbase>ኃ</cbase><notation>᎑</notation><cbase>ኒ</cbase><notation>᎔</notation><cbase>ታ</cbase><notation>ር</notation>፡
 <notationGroup>
-  <cbase>ለ</cbase><notation>፪</notation><cbase>ሔ</cbase><notation>᎓</notation><cbase>ዋ</cbase><notation><span>᎖</span></notation><cbase>ን</cbase><notation></notation>
-  <sereyu><cbase>ለ</cbase><notation></notation><cbase>ሔ</cbase><notation>᎖</notation><cbase>ዋ</cbase><notation>᎖</notation><cbase>ን</cbase><marker>ረዩ</marker></sereyu>
+  <group><cbase>ለ</cbase><notation>፪</notation><cbase>ሔ</cbase><notation>᎓</notation><cbase>ዋ</cbase><notation>᎖</notation><cbase>ን</cbase></group>
+  <group><sereyu><abbr><cbase>ለ</cbase></abbr><abbr><cbase>ሔ</cbase></abbr><notation>᎖</notation><abbr><cbase>ዋ</cbase></abbr><notation>᎖</notation><abbr><cbase>ን</cbase></abbr><marker>ረዩ</marker><dfn>ለሔ-ዋን</dfn></sereyu></group>
 </notationGroup>
-᎓<sereyu>ተፈ<cbase>ሥ</cbase><notation>፡</notation><cbase>ሒ</cbase><marker>ረዩ</marker></sereyu>፡እንተ፡ ...
+᎓<sereyu>ተፈ<abbr><cbase>ሥ</cbase></abbr><notation>፡</notation><abbr><cbase>ሒ</cbase></abbr><marker>ረዩ</marker><dfn>ሥሒ</dfn></sereyu>፡እንተ፡ ...
 </chant>
 </script>
 </td></tr>
