Use sereyu class with rt.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -64,6 +64,7 @@ function unhighlightMedgam(medgam) {
 <style>
   .medgam-example{}
   .rubricate { color: #8a0707; }
+  rt.sereyu { color: #daa520; }
   .figure-wide { margin-right: 10%; }
 ruby { font-size: 50px; color: rgb(102, 102, 102); font-family: "Abyssinica SIL", "ms mincho", stsong, 'lisong pro';  }
 ruby.regular { font-size: 16px; color: rgb(102, 102, 102); font-family: "Abyssinica SIL", "ms mincho", stsong, 'lisong pro';  }
@@ -702,7 +703,7 @@ that is not a child of a <code><a data-link-type="element" href="#elementdef-cha
 </div>
 <div style="position: relative; display:inline-block; width:560px; margin-left:330px; float:left; top:00px;">
   <ruby class="row2ex"><rb>ለ</rb><rt>፪</rt><rb>ሔ</rb><rt>᎓</rt><rb>ዋ</rb><rt>᎖</rt><rb>ን</rb><rt></rt></ruby>
-  <ruby class="row1ex"><rb>ለ</rb><rt></rt><rb>ሔ</rb><rt>᎖</rt><rb>ዋ</rb><rt>᎖</rt><rb>ን</rb><rt>ረዩ</rt>᎓ተፈ<rb>ሥ</rb><rt>፡</rt><rb>ሒ</rb><rt>ረዩ</rt>፡እንተ፡ ...</ruby>
+  <ruby class="row1ex"><rb>ለ</rb><rt></rt><rb>ሔ</rb><rt>᎖</rt><rb>ዋ</rb><rt>᎖</rt><rb>ን</rb><rt class="sereyu">ረዩ</rt>᎓ተፈ<rb>ሥ</rb><rt>፡</rt><rb>ሒ</rb><rt class="sereyu">ረዩ</rt>፡እንተ፡ ...</ruby>
 </div>
 <!-- ፺፱ኛ፡ትምህርት/ ውዳሴ፡ማርያም፡ዘሠሉስ፡ ምዕራፍ፡ገጽ፡፻፹፰፡ዜማ፡በዓራራይ፡ -->
 <p><br/><br/></p>
