rewording sereyu definition.

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -273,7 +273,7 @@ rt.sereyu { color: #daa520; }
   <section>
   <h3 id="sereyu"><a href="#sereyu">Sereyu (ሥረዩ)</a></h3>
   <p><em>Sereyu</em> marks a word in the base hymn as a reference point to identify the authoritative exemplar for the vocalization of a miliket or a
-  beit. For miliket, the Sereyu point is marked with the abbreviation &ldquo;ረዩ&rdquo; and appears in the interlinear notation along with miliket and qirts but is never itself vocalized. For beit, the Sereyu point is marked with the abbreviation &lsquo;ዩ&rsquo; and appears in the left side margin just as
+  haleita. For miliket, the Sereyu point is marked with the abbreviation &ldquo;ረዩ&rdquo; and appears in the interlinear notation along with miliket and qirts but is never itself vocalized. For a haleita, the Sereyu definition point is marked with the abbreviation &lsquo;ዩ&rsquo; and appears in the left side margin just as
   a beit would be.
   </section>
   </section>
