Syncing with Anqetse Halieta from Digua p 287

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -752,10 +752,10 @@ additional component than a miliket.
 <tr><td>
 <div class="beit">ዩ</div> <div class="medgam">፪</div>
 <div style="float: left;">
- በ<span style="color:red">፫</span>፡ሃ<ruby class="regular"><rb>ሌ</rb><rt>፴</rt><rb>፡ሉ</rb><rt></rt><rb>ያ</rb><rt>ጺ</rt><rb>፡</rb><rt></rt><rb>ሃ</rb><rt>፴</rt><rb>ሌ፡</rb><rt></rt><rb>ሃ</rb><rt>᎓</rt></ruby>ሌ፡ሉ<ruby class="regular"><rb>ያ</rb><rt>በበ</rt><rb>፡</rb><rt></rt></ruby>
+ በ<span style="color:red">፫</span>፡ሃ<ruby class="regular"><rb>ሌ</rb><rt>፴</rt><rb>፡</rb><rt></rt><rb>ሉ</rb><rt>᎐</rt><rb>ያ</rb><rt>ጺ</rt><rb>፡</rb><rt></rt><rb>ሃ</rb><rt>፴</rt><rb>ሌ፡</rb><rt></rt><rb>ሃ</rb><rt>᎓</rt></ruby>ሌ፡ሉ<ruby class="regular"><rb>ያ</rb><rt>በበ</rt><rb>፡</rb><rt></rt></ruby>
 </div>
 <div style="position: relative;">
-<ruby class="row2 regular"><rb>ዖደ</rb><rt>᎖᎑</rt></ruby>
+<ruby class="row2 regular"><rb>ዖ</rb><rt>᎖᎑</rt><rb>ደ</rb><rt>ዑ</rt></ruby>
 <ruby class="row1 regular"><rb>ዖ</rb><rt>᎑</rt><rb>ደ</rb><rt>ዑ</rt><rb>፡አድ</rb><rt></rt><rb>ያ</rb><rt>᎑</rt><rb>መ</rb><rt>ፔ</rt><rb>፡</rb><rt></rt><rb>ዮ</rb><rt>᎑</rt></ruby>
 </div>
 <!--
@@ -769,9 +769,9 @@ additional component than a miliket.
 <sereyu id="ዖደ">
 <marker>ዩ</marker>
 <dfn>በ<span class="rubricate">፫</span>፡</dfn>ሃ
-<cbase>ሌ</cbase><notation>፴</notation>፡ሉ<cbase>ያ</cbase><notation>ጺ</notation>፡<cbase>ሃ</cbase><notation>፴</notation>ሌ፡<cbase>ሃ</cbase><notation>᎓</notation>ሌ፡ሉ<cbase>ያ</cbase><notation>በበ</notation>፡
+<cbase>ሌ</cbase><notation>፴</notation>፡<cbase>ሉ</cbase><notation>᎐</notation><cbase>ያ</cbase><notation>ጺ</notation>፡<cbase>ሃ</cbase><notation>፴</notation>ሌ፡<cbase>ሃ</cbase><notation>᎓</notation>ሌ፡ሉ<cbase>ያ</cbase><notation>በበ</notation>፡
 <notationGroup>
-  <group class="medgam-araray"><abbr><cbase>ዖደ</cbase><notation>᎖᎑</notation></group>
+  <group class="medgam-araray"><abbr><cbase>ዖ</cbase><notation>᎖᎑</notation>ደ</cbase><notation>ዑ</notation></group>
   <group><abbr><cbase>ዖ</cbase><notation>᎑</notation><cbase>ደ</cbase><notation>ዑ</notation></abbr></group>
 </notationGroup>
 ፡አድ<cbase>ያ</cbase><notation>᎑</notation><cbase>መ</cbase><notation>ፔ</notation>፡</sereyu><cbase>ዮ</cbase><notation>᎑</notation>
